Fix responsiveness of header on Mobile devices

--- a/SassFiles/main.scss
+++ b/SassFiles/main.scss
@@ -342,6 +342,14 @@ ul.social-network {
     padding: 0;
     justify-content: center;
     border: none;
+
+    p{
+      padding: 40px 20px;
+      border: 1px solid #626972;
+      border-top: transparent;
+      border-left: transparent;
+      border-right: transparent;
+    }
   }
   .description{
     height: 150px;
@@ -364,6 +372,22 @@ ul.social-network {
         display: inline;
         margin: 0 5px;
     }
+}
+
+@media screen and (max-width: 500px) {
+  .header{
+    margin-top: 60px;
+  }
+  .name{
+    p{
+      font-size: 40px;
+    }
+  }
+  .description{
+    font-size: 24px;
+    margin-right: 130px;
+    height: 100px;
+  }
 }
 
 @media screen and (max-width: 450px) {
